Fixing CORS issue and missing proj4

--- a/phoneTracker/index.html
+++ b/phoneTracker/index.html
@@ -9,6 +9,9 @@
     <h1>Sending Data to Context Broker</h1>
     <div id="status">Starting...</div>
 
+    <!-- Include proj4.js library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.7.5/proj4.js"></script>
+
     <!-- Link to the JavaScript file -->
     <script src="app.js"></script>
 </body>
