Added all files

--- a/index.html
+++ b/index.html
@@ -39,18 +39,23 @@
             <!-- Static Model Description Box -->
             <div class="description-box">
                 <h2>Static Model</h2>
-                <p>Explore the university campus in a high-resolution 3D model. This model is static and allows you to closely examine different areas with precise detail.</p>
+                <p>Explore the university campus in a high-resolution 3D model. This model is static and allows you to closely examine different areas with precise detail.<br>
+                    <span style="font-size: 12px; margin-top: 0; margin-bottom: 4px;">
+                    <strong>F -> "Freemode" ("WASD")<br> 
+                    L -> "Locked" ("LEFT/RIGHT arrow key")</strong><br></span></p>
             </div>
 
             <!-- Dynamic Model Description Box -->
             <div class="description-box">
                 <h2>Dynamic Model</h2>
-                <p>Engage with the live model of the campus that shows real-time movement data. Watch the campus come alive with dynamic movements and interactions.</p>
+                <p>Engage with the live model of the campus that shows real-time movement data. Watch the campus come alive with dynamic movements and interactions.<br>
+                    <span style="font-size: 12px; margin-top: 0; margin-bottom: 4px;"><strong>Use "WASD to move around.</strong></span></p>
             </div>
         </div>
 
         <div id="wifi-section">
-            <p>Additionally, explore WiFi data.</p>
+            <h2>Additionally, explore WiFi data.</h2>
+            <p><span style="font-size: 16px;">Get people population in different Access Points of university campus over the last 7 days.</span></p>
             <button id="view-wifi">WiFi Data</button>
         </div>
     </div>
