Connction with other local devices established

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <!-- Static Model Stream Page -->
     <div id="static-page" class="page">
         <h1>Static Model Stream</h1>
-        <iframe src="http://localhost:81"></iframe>
+        <iframe id="static-iframe" src="about:blank"></iframe> <!-- Use a placeholder URL initially -->
         <button class="back-to-overview">Back to Overview</button>
     </div>
 
     <!-- Dynamic Model Stream Page -->
     <div id="dynamic-page" class="page">
         <h1>Dynamic Model Stream</h1>
-        <iframe src="http://localhost:80"></iframe>
+        <iframe id="dynamic-iframe" src="about:blank"></iframe> <!-- Use a placeholder URL initially -->
         <button class="back-to-overview">Back to Overview</button>
     </div>
 
